# TS_Rust

./: .gitignore  README.md
goapp/: README.md
goapp/cmd/: classes.go
goapp/cmd/lliist/: llist.go
my-app/: README.md  package-lock.json  package.json  tsconfig.node.json
my-app/src/: counter.ts  main.ts
my-app/src/classes/: class.ts  index.ts
my-app/src/linklist/: llist.ts
my-redis/: Cargo.toml  README.md
my-redis/examples/: hello-redis.rs
my-redis/src/: main copy.rs
rustapp/: Cargo.toml  README.md
rustapp/docs/: ref_rust.md  rust_copy_clone.md
rustapp/src/: main.rs
